force-app/main/default/objects/LLC_BI__Service_Mgmt__c/LLC_BI__Service_Mgmt__c.object-meta.xml
<CustomObject>
    <description>This object allows the user to track high level information about a service that also includes lookups and relationships to multiple other objects.</description>
    <label>Service Mgmt</label>
    <nameField>
        <displayFormat>SM-{000000000}</displayFormat>
        <label>Service Mgmt Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Mgmt</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>