force-app/main/default/objects/LLC_BI__Service_Mgmt__c/fields/ffin_Service_Type_Category__c.field-meta.xml
<CustomField>
    <fullName>ffin_Service_Type_Category__c</fullName>
    <label>Service Type Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Consumer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>