force-app/main/default/objects/LLC_BI__Service_Mgmt__c/fields/LLC_BI__Account__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system uses this lookup field to determine the account that is being serviced. By default, this field is blank.</description>
    <inlineHelpText>Enter the correct Account object lookup in this field.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Mgmt</relationshipLabel>
    <relationshipName>Service_Mgmt</relationshipName>
    <type>Lookup</type>
</CustomField>