force-app/main/default/objects/LLC_BI__Service_Mgmt__c/fields/LLC_BI__Highest__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Highest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user populates this lookup field to specify the related Service Mgmt object. The default value is blank.</description>
    <inlineHelpText>Enter the related Service Mgmt object lookupKey in this field to determine the related Service Mgmt record.</inlineHelpText>
    <label>Highest</label>
    <referenceTo>LLC_BI__Service_Mgmt__c</referenceTo>
    <relationshipLabel>Service Mgmts (Highest)</relationshipLabel>
    <relationshipName>Highest_Service_Mgmts</relationshipName>
    <type>Lookup</type>
</CustomField>