force-app/main/default/objects/LLC_BI__Service_Mgmt__c/fields/LLC_BI__Professional_License_Number_Firm__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Professional_License_Number_Firm__c</fullName>
    <description>Users populate this optional text field to indicate the professional license number for the relationship. For real estate transactions, this field may represent the license number of the mortgage or real estate broker. By default, this field is blank.</description>
    <inlineHelpText>Enter the professional license number for the relationship, such as a mortgage or real estate broker license number.</inlineHelpText>
    <label>Professional License Number (Firm)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>