force-app/main/default/objects/LLC_BI__Service_Mgmt__c/fields/LLC_BI__Service_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Service_Type__c</fullName>
    <description>The user populates this picklist field to determine the service type. By default, this field is blank.</description>
    <inlineHelpText>Select the correct Service type.</inlineHelpText>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Appraiser</fullName>
                <label>Appraisal</label>
            </value>
            <value>
                <fullName>Certifications of Completion</fullName>
            </value>
            <value>
                <fullName>Evaluations</fullName>
            </value>
            <value>
                <fullName>Flood Approval Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>